--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,10 @@
 .page {
-  /* Agrega las propiedades de la clase page aquí */
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: auto;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .header {
@@ -14,34 +19,52 @@
 }
 
 .nav {
+  display: flex;
+  justify-content: space-between;
   /* Agrega las propiedades flex aquí */
 }
 
 .nav__logo {
+  height: 80px;
+  width: 58px;
 }
 
 .nav__links {
-  /* Restablece los estilos predeterminados de list aquí */
+  display: flex;
+  column-gap: 20px;
+  list-style: none;
   margin: 8px 0 0;
+  list-style-type: none;
 }
 
 .nav__link {
   color: #000000;
-  text-decoration: none;
   font-weight: bold;
+  text-decoration: none;
 }
 
 .header__content {
-  /* Agrega las propiedades flex aquí */
+  display: flex;
+  justify-content: space-between;
 }
 
 .header__title {
+  max-width: 635px;
+  font-size: 62px;
+  line-height: 76px;
+  font-weight: 500;
+  margin-top: 128px;
 }
 
 .header__description {
+  max-width: 515px;
+  font-size: 20px;
+  line-height: 30px;
+  margin-top: 32px;
 }
 
 .header__image {
+  max-width: 636px;
 }
 
 .header__footer {
@@ -61,4 +84,80 @@
 .header__address {
   margin: 0;
   color: #838383;
+}
+
+.staff {
+  background-image: url("../images/staff_picks_background.jpg");
+  padding: 100px 0 140px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.staff__title {
+  text-align: center;
+  font-size: 44px;
+  line-height: 52px;
+  font-weight: 400;
+  margin: 0 0 24px;
+  color: #ffffff;
+}
+
+.staff__subtitle {
+  text-align: center;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 400;
+  margin: 0;
+  color: #ffffff;
+}
+ul {
+  padding-left: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 40px;
+  list-style-type: none;
+}
+
+.staff__cards {
+  max-width: 760px;
+  margin: 68px auto 0;
+}
+
+.card {
+  background-color: #fff;
+  border-radius: 6px;
+  padding: 32px 40px 20px 32px;
+  box-sizing: border-box;
+  height: 420px;
+  width: 360px;
+}
+
+.card__content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.card__title {
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.card__text {
+  display: contents;
+  margin: 20px 0 0;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.card__footer {
+  font-size: 14px;
+  line-height: 20px;
+  color: #838383;
+  margin: auto 0 0;
 }
